--- a/styles/style.css
+++ b/styles/style.css
@@ -41,5 +41,6 @@ header button:hover, .contact button:hover {
       -ms-flex-direction: row;
           flex-direction: row;
   background: #b9cf3d;
+  width: 80%;
 }
 /*# sourceMappingURL=style.css.map */
